--- a/package.json
+++ b/package.json
@@ -1,53 +1,51 @@
 {
-  "name": "shadcn-stepper",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@vercel/analytics": "^1.2.2",
-    "@vercel/speed-insights": "^1.0.10",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "i": "^0.3.7",
-    "lucide-react": "^0.365.0",
-    "next": "14.1.4",
-    "next-themes": "^0.3.0",
-    "npm": "^10.5.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.2",
-    "react-resizable-panels": "^2.0.16",
-    "react-wrap-balancer": "^1.1.0",
-    "sonner": "^1.4.41",
-    "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.6.4",
-    "typescript": "^5.4.4",
-    "@types/node": "^20.12.5",
-    "@types/react": "^18.2.75",
-    "@types/react-dom": "^18.2.24",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
-  },
-  "trustedDependencies": [
-    "@biomejs/biome"
-  ]
+	"name": "shadcn-stepper",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.3.4",
+		"@radix-ui/react-collapsible": "^1.0.3",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-radio-group": "^1.1.3",
+		"@radix-ui/react-separator": "^1.0.3",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-switch": "^1.0.3",
+		"@radix-ui/react-toast": "^1.1.5",
+		"@vercel/analytics": "^1.2.2",
+		"@vercel/speed-insights": "^1.0.10",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"i": "^0.3.7",
+		"lucide-react": "^0.371.0",
+		"next": "14.2.2",
+		"next-themes": "^0.3.0",
+		"npm": "^10.5.2",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.51.3",
+		"react-resizable-panels": "^2.0.18",
+		"react-wrap-balancer": "^1.1.0",
+		"sonner": "^1.4.41",
+		"tailwind-merge": "^2.2.2",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.22.5"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.7.0",
+		"typescript": "^5.4.5",
+		"@types/node": "^20.12.7",
+		"@types/react": "^18.2.79",
+		"@types/react-dom": "^18.2.25",
+		"autoprefixer": "^10.4.19",
+		"postcss": "^8.4.38",
+		"tailwindcss": "^3.4.3"
+	},
+	"trustedDependencies": ["@biomejs/biome"]
 }
