docs, packages: update readme and tsconfig to be able to run build

--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -10,7 +10,7 @@
 		"lib": ["es2022", "DOM", "DOM.Iterable"],
 		"module": "ESNext",
 		"moduleDetection": "force",
-		"moduleResolution": "Bundler",
+		"moduleResolution": "Node",
 		"noUncheckedIndexedAccess": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
