packages: remove private from package json and add changelog file

--- a/.github/workflows/changelog-release.yml
+++ b/.github/workflows/changelog-release.yml
@@ -49,6 +49,8 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git tag -a "v$(node -p -e "require('./package.json').version")" -m "Release version $(node -p -e "require('./package.json').version")"
           git push origin --tags
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_ACTION_TOKEN }}
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
