packages, workflows: nit

--- a/.github/workflows/changelog-release.yml
+++ b/.github/workflows/changelog-release.yml
@@ -9,6 +9,8 @@ on:
     paths:
       - 'packages/react/**'
 
+concurrency: ${{ github.workflow }}-${{ github.ref }}
+
 jobs:
   changelog:
     runs-on: ubuntu-latest
