packages: make the library non-private

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@stepperize/react",
 	"version": "0.1.0",
+	"private": false,
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
 	"types": "dist/index.d.ts",
