--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -24,12 +24,13 @@
 		"prepublishOnly": "pnpm run build",
 		"clean": "rm -rf .turbo && rm -rf node_modules dist"
 	},
-	"dependencies": {
+	"peerDependencies": {
 		"react": "^18.3.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
+		"react": "^18.3.1",
 		"tsup": "^8.2.4",
 		"typescript": "^5.5.4"
 	}
