chore(changeset): revert to default version

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,13 +1,10 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.0.2/schema.json",
-  "changelog": [
-    "@changesets/changelog-github",
-    { "repo": "damianricobelli/stepperize" }
-  ],
+  "changelog": "@changesets/changelog-github",
   "commit": false,
   "fixed": [],
   "linked": [],
-  "access": "public",
+  "access": "restricted",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
   "ignore": []
