--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,7 @@
 		"@hookform/resolvers": "^3.9.0",
 		"@radix-ui/colors": "^3.0.0",
 		"@radix-ui/react-collapsible": "^1.1.0",
+		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.1",
