refactor: new API and docs

--- a/docs/package.json
+++ b/docs/package.json
@@ -23,10 +23,11 @@
 		"@radix-ui/react-switch": "^1.1.0",
 		"@radix-ui/react-tabs": "^1.1.0",
 		"@stepperize/react": "workspace:*",
+		"@vercel/og": "^0.6.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.3.28",
-		"lucide-react": "^0.427.0",
+		"lucide-react": "^0.428.0",
 		"next": "14.2.5",
 		"next-themes": "^0.3.0",
 		"nextra": "^2.13.4",
