chore: add exports

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@stepperize/react",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"private": false,
 	"publishConfig": {
 		"access": "public"
@@ -10,6 +10,13 @@
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
 	"types": "dist/index.d.ts",
+	"exports": {
+	    ".": {
+		  "import": "./dist/index.mjs",
+		  "require": "./dist/index.js",
+		  "types": "./dist/index.d.ts"
+		}
+    },
 	"scripts": {
 		"build": "tsup",
 		"dev": "tsup --watch",
