--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Publish to npm
+name: Realease
 
 on:
   push:
@@ -9,10 +9,6 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   release:
-    permissions:
-      contents: write 
-      issues: write     
-      pull-requests: write  
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -46,10 +42,10 @@ jobs:
       - name: Create Release Pull Request or Publish to npm
         uses: changesets/action@v1
         with:
-          publish: pnpm release
-          version: pnpm version
+          version: pnpm ci:version
           commit: "chore: new release"
           title: "chore: new release"
+          publish: pnpm ci:release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_ACTION_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
