--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
 		"clean": "turbo run clean && rm -rf node_modules .pnpm-store .turbo",
 		"format-and-lint": "biome check .",
 		"format-and-lint:fix": "biome check . --write",
-		"version": "changeset version",
-		"release": "changeset publish"
+		"ci:version": "changeset version",
+		"ci:release": "changeset publish"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
+		"@changesets/changelog-github": "0.5.0",
 		"@changesets/cli": "^2.27.7",
 		"turbo": "^2.0.14",
 		"typescript": "^5.5.4"
