react: update functionality

--- a/biome.json
+++ b/biome.json
@@ -31,7 +31,8 @@
 			},
 			"correctness": {
 				"noUnusedVariables": "error",
-				"noUnusedImports": "error"
+				"noUnusedImports": "error",
+				"useExhaustiveDependencies": "off"
 			}
 		}
 	}
