--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,8 @@
 		"clean": "rm -rf .turbo .next node_modules"
 	},
 	"dependencies": {
+		"@conform-to/react": "^1.1.5",
+		"@conform-to/zod": "^1.1.5",
 		"@hookform/resolvers": "^3.9.0",
 		"@radix-ui/colors": "^3.0.0",
 		"@radix-ui/react-collapsible": "^1.1.0",
@@ -18,6 +20,7 @@
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.1",
 		"@radix-ui/react-radio-group": "^1.2.0",
+		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-scroll-area": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-switch": "^1.1.0",
@@ -26,9 +29,9 @@
 		"@vercel/og": "^0.6.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
-		"framer-motion": "^11.3.28",
-		"lucide-react": "^0.428.0",
-		"next": "14.2.5",
+		"framer-motion": "^11.3.29",
+		"lucide-react": "^0.429.0",
+		"next": "14.2.6",
 		"next-themes": "^0.3.0",
 		"nextra": "^2.13.4",
 		"nextra-theme-docs": "^2.13.4",
@@ -41,8 +44,8 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@types/node": "^22.3.0",
-		"@types/react": "^18.3.3",
+		"@types/node": "^22.5.0",
+		"@types/react": "^18.3.4",
 		"@types/react-dom": "^18.3.0",
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.41",
