--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -6,9 +6,7 @@
 		"access": "public"
 	},
 	"sideEffects": false,
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
 	"types": "dist/index.d.ts",
@@ -30,7 +28,7 @@
 		"react": "^18.3.1"
 	},
 	"devDependencies": {
-		"@types/react": "^18.3.3",
+		"@types/react": "^18.3.4",
 		"@types/react-dom": "^18.3.0",
 		"react": "^18.3.1",
 		"tsup": "^8.2.4",
