--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -5,13 +5,13 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"description": "Powerful, type-safe steppers for React and React Native.",
+	"description": "The library for building step-by-step workflows for web and mobile apps",
 	"author": "damianricobelli",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/damianricobelli/stepperize.git",
-		"directory": "packages/react-form"
+		"directory": "packages/react"
 	},
 	"homepage": "https://stepperize.vercel.app",
 	"sideEffects": false,
