--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -34,12 +34,12 @@
 		"clean": "rm -rf .turbo && rm -rf node_modules dist"
 	},
 	"peerDependencies": {
-		"react": ">=18.0.0"
+		"react": "^18.0.0"
 	},
 	"devDependencies": {
-		"@types/react": ">=18.0.0",
-		"@types/react-dom": ">=18.0.0",
-		"react": ">=18.0.0",
+		"@types/react": "^18.0.0",
+		"@types/react-dom": "^18.0.0",
+		"react": "^18.0.0",
 		"tsup": "^8.3.0",
 		"typescript": "^5.6.2"
 	}
