chore: update turbo json config

--- a/turbo.json
+++ b/turbo.json
@@ -15,7 +15,8 @@
 		},
 		"dev": {
 			"cache": false,
-			"persistent": true
+			"persistent": true,
+			"dependsOn": ["^build"]
 		},
 		"clean": {
 			"cache": false
