--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -36,7 +36,8 @@
 		"clean": "rm -rf .turbo && rm -rf node_modules dist"
 	},
 	"peerDependencies": {
-		"react": "^18.0.0"
+		"react": "^17.0.0 || ^18.0.0 || ^19.0.0",
+                "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.0",
