--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,51 +11,50 @@
 	"dependencies": {
 		"@conform-to/react": "^1.2.2",
 		"@conform-to/zod": "^1.2.2",
-		"@hookform/resolvers": "^3.9.0",
+		"@hookform/resolvers": "^3.9.1",
 		"@radix-ui/colors": "^3.0.0",
-		"@radix-ui/react-collapsible": "^1.1.0",
-		"@radix-ui/react-dialog": "^1.1.1",
-		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-collapsible": "^1.1.1",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-icons": "^1.3.2",
 		"@radix-ui/react-label": "^2.1.0",
-		"@radix-ui/react-popover": "^1.1.1",
-		"@radix-ui/react-radio-group": "^1.2.0",
-		"@radix-ui/react-scroll-area": "^1.1.0",
+		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-radio-group": "^1.2.1",
+		"@radix-ui/react-scroll-area": "^1.2.1",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
-		"@radix-ui/react-switch": "^1.1.0",
-		"@radix-ui/react-tabs": "^1.1.0",
-		"@radix-ui/react-tooltip": "^1.1.2",
+		"@radix-ui/react-switch": "^1.1.1",
+		"@radix-ui/react-tabs": "^1.1.1",
+		"@radix-ui/react-tooltip": "^1.1.4",
 		"@stepperize/react": "workspace:*",
-		"class-variance-authority": "^0.7.0",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"framer-motion": "^11.8.0",
-		"fumadocs-core": "13.4.10",
-		"fumadocs-mdx": "10.0.2",
-		"fumadocs-twoslash": "1.1.3",
-		"fumadocs-ui": "13.4.10",
-		"hast-util-to-jsx-runtime": "^2.3.0",
-		"lucide-react": "^0.446.0",
+		"motion": "^11.12.0",
+		"fumadocs-core": "14.5.5",
+		"fumadocs-mdx": "11.1.2",
+		"fumadocs-ui": "14.5.5",
+		"hast-util-to-jsx-runtime": "^2.3.2",
+		"lucide-react": "^0.462.0",
 		"lodash": "^4.17.21",
-		"next": "^14.2.13",
-		"next-themes": "^0.3.0",
+		"next": "^15.0.3",
+		"next-themes": "^0.4.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-hook-form": "^7.53.0",
-		"sonner": "^1.5.0",
-		"tailwind-merge": "^2.5.2",
+		"react-hook-form": "^7.53.2",
+		"sonner": "^1.7.0",
+		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@types/lodash": "^4.17.9",
+		"@types/lodash": "^4.17.13",
 		"@types/mdx": "^2.0.13",
-		"@types/node": "22.7.3",
-		"@types/react": "^18.3.9",
-		"@types/react-dom": "^18.3.0",
+		"@types/node": "22.10.1",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
 		"autoprefixer": "^10.4.20",
-		"postcss": "^8.4.47",
-		"shiki": "^1.20.0",
-		"tailwindcss": "^3.4.13",
-		"typescript": "^5.6.2"
+		"postcss": "^8.4.49",
+		"shiki": "^1.24.0",
+		"tailwindcss": "^3.4.15",
+		"typescript": "^5.7.2"
 	}
 }
