--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,9 +15,7 @@
 	},
 	"homepage": "https://stepperize.vercel.app",
 	"sideEffects": false,
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
 	"types": "dist/index.d.ts",
@@ -40,10 +38,10 @@
 		"react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
 	},
 	"devDependencies": {
-		"@types/react": "^18.0.0",
-		"@types/react-dom": "^18.0.0",
-		"react": "^18.0.0",
-		"tsup": "^8.3.0",
-		"typescript": "^5.6.2"
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"react": "^18.3.1",
+		"tsup": "^8.3.5",
+		"typescript": "^5.7.2"
 	}
 }
