--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -32,6 +32,7 @@
 		"fumadocs-core": "14.5.5",
 		"fumadocs-mdx": "11.1.2",
 		"fumadocs-ui": "14.5.5",
+		"fumadocs-twoslash": "2.0.1",
 		"hast-util-to-jsx-runtime": "^2.3.2",
 		"lucide-react": "^0.462.0",
 		"lodash": "^4.17.21",
