--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,21 +1,11 @@
 {
 	"name": "@stepperize/core",
-	"version": "4.1.0",
+	"version": "0.0.1",
 	"private": false,
-	"publishConfig": {
-		"access": "public"
-	},
-	"description": "The library for building step-by-step workflows for web and mobile apps",
-	"author": "damianricobelli",
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/damianricobelli/stepperize.git",
-		"directory": "packages/core"
-	},
-	"homepage": "https://stepperize.vercel.app",
 	"sideEffects": false,
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
 	"types": "dist/index.d.ts",
@@ -30,7 +20,6 @@
 		"build": "tsup",
 		"dev": "tsup --watch",
 		"lint": "turbo lint",
-		"prepublishOnly": "pnpm run build",
 		"clean": "rm -rf .turbo && rm -rf node_modules dist"
 	},
 	"devDependencies": {
