--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,9 +3,7 @@
 	"version": "0.0.1",
 	"private": false,
 	"sideEffects": false,
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
 	"types": "dist/index.d.ts",
