--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -13,11 +13,6 @@
 		"skipLibCheck": true,
 		"strict": true
 	},
-	"include": [
-		"."
-	],
-	"exclude": [
-		"node_modules",
-		"dist"
-	]
+	"include": ["."],
+	"exclude": ["node_modules", "dist"]
 }
