--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -13,9 +13,7 @@
 		}
 	},
 	"sideEffects": false,
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"scripts": {
 		"build": "tsup",
 		"dev": "tsup --watch",
