--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build @stepperize/react
-        run: pnpm turbo run build --filter=@stepperize/react
+        run: pnpm turbo run build --filter=@stepperize/react --filter=@stepperize/vue
 
       - name: Create Release Pull Request or Publish to npm
         uses: changesets/action@v1
