--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build @stepperize/react
+      - name: Build stepperize packages
         run: pnpm turbo run build --filter=@stepperize/react --filter=@stepperize/vue
 
       - name: Create Release Pull Request or Publish to npm
