--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,51 +11,52 @@
 	"dependencies": {
 		"@conform-to/react": "^1.2.2",
 		"@conform-to/zod": "^1.2.2",
-		"@hookform/resolvers": "^3.9.1",
+		"@hookform/resolvers": "^4.1.2",
 		"@radix-ui/colors": "^3.0.0",
-		"@radix-ui/react-collapsible": "^1.1.2",
-		"@radix-ui/react-dialog": "^1.1.4",
+		"@radix-ui/react-collapsible": "^1.1.3",
+		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-icons": "^1.3.2",
-		"@radix-ui/react-label": "^2.1.1",
-		"@radix-ui/react-popover": "^1.1.4",
-		"@radix-ui/react-radio-group": "^1.2.2",
-		"@radix-ui/react-scroll-area": "^1.2.2",
-		"@radix-ui/react-separator": "^1.1.1",
-		"@radix-ui/react-slot": "^1.1.1",
-		"@radix-ui/react-switch": "^1.1.2",
-		"@radix-ui/react-tabs": "^1.1.2",
-		"@radix-ui/react-tooltip": "^1.1.6",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-popover": "^1.1.6",
+		"@radix-ui/react-radio-group": "^1.2.3",
+		"@radix-ui/react-scroll-area": "^1.2.3",
+		"@radix-ui/react-separator": "^1.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-switch": "^1.1.3",
+		"@radix-ui/react-tabs": "^1.1.3",
+		"@radix-ui/react-tooltip": "^1.1.8",
 		"@stepperize/react": "workspace:*",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"motion": "^11.15.0",
-		"fumadocs-core": "14.5.5",
-		"fumadocs-mdx": "11.1.2",
-		"fumadocs-ui": "14.5.5",
-		"fumadocs-twoslash": "2.0.1",
-		"hast-util-to-jsx-runtime": "^2.3.2",
-		"lucide-react": "^0.469.0",
+		"motion": "^12.4.7",
+		"fumadocs-core": "15.0.12",
+		"fumadocs-mdx": "11.5.6",
+		"fumadocs-ui": "15.0.12",
+		"fumadocs-twoslash": "3.0.0",
+		"hast-util-to-jsx-runtime": "^2.3.4",
+		"lucide-react": "^0.475.0",
 		"lodash": "^4.17.21",
-		"next": "^15.1.3",
+		"next": "^15.1.7",
 		"next-themes": "^0.4.4",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
-		"sonner": "^1.7.1",
-		"tailwind-merge": "^2.6.0",
+		"sonner": "^2.0.1",
+		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.24.1"
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
-		"@types/lodash": "^4.17.14",
+		"@types/lodash": "^4.17.15",
 		"@types/mdx": "^2.0.13",
-		"@types/node": "22.10.5",
-		"@types/react": "^18.3.18",
-		"@types/react-dom": "^18.3.5",
+		"@types/node": "22.13.5",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
 		"autoprefixer": "^10.4.20",
-		"postcss": "^8.4.49",
-		"shiki": "^1.26.1",
-		"tailwindcss": "^3.4.17",
-		"typescript": "^5.7.2"
+		"@tailwindcss/postcss": "^4.0.8",
+		"postcss": "^8.5.3",
+		"shiki": "^3.0.0",
+		"tailwindcss": "^4.0.8",
+		"typescript": "^5.7.3"
 	}
 }
