feat: Add Solid.js support and improve package configurations
- Implemented Solid.js package with core stepper functionality
- Updated package configurations for core, react, solid, and vue packages
- Introduced catalog-based dependency management
- Enhanced build process with Terser for minification
- Updated documentation and README files
- Added Solid.js to docs project dependencies
- Refined step navigation and transition logic

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -17,6 +17,7 @@
 		"@radix-ui/react-scroll-area": "^1.2.3",
 		"@radix-ui/react-tabs": "^1.1.3",
 		"@stepperize/react": "workspace:*",
+		"@stepperize/solid": "workspace:*",
 		"@stepperize/vue": "workspace:*",
 		"class-variance-authority": "^0.7.1",
 		"fumadocs-core": "15.0.15",
@@ -32,6 +33,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"shiki": "3.1.0",
+		"solid-js": "^1.9.5",
 		"tailwind-merge": "^3.0.2",
 		"ts-morph": "25.0.1",
 		"twoslash": "^0.3.1"
