--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -15,9 +15,7 @@
 	},
 	"homepage": "https://stepperize.vercel.app",
 	"sideEffects": false,
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
 	"types": "dist/index.d.ts",
@@ -39,10 +37,13 @@
 		"@stepperize/core": "workspace:*"
 	},
 	"peerDependencies": {
-		"vue": ">=3.3.0"
+		"vue": ">=3.3.0",
+		"typescript": "^5.0.2"
 	},
 	"devDependencies": {
-		"tsup": "^8.4.0",
-		"typescript": "^5.8.2"
+		"tsup": "catalog:",
+		"terser": "catalog:",
+		"typescript": "catalog:",
+		"vue": "3.5.13"
 	}
 }
