--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,7 @@
 packages:
-  - 'apps/*'
-  - 'packages/*'
+  - "apps/*"
+  - "packages/*"
+catalog:
+  tsup: ^8.4.0
+  terser: ^5.39.0
+  typescript: ^5.8.2
