--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,9 +15,7 @@
 	},
 	"homepage": "https://stepperize.vercel.app",
 	"sideEffects": false,
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
 	"types": "dist/index.d.ts",
@@ -36,7 +34,7 @@
 		"clean": "rm -rf .turbo && rm -rf node_modules dist"
 	},
 	"peerDependencies": {
-		"typescript": "^5.0.2"
+		"typescript": ">=5.0.2"
 	},
 	"devDependencies": {
 		"tsup": "catalog:",
