--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -4,12 +4,12 @@
 	"private": true,
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
-	"types": "dist/index.d.ts",
+	"types": "dist/index.d.mts",
 	"exports": {
 		".": {
 			"import": "./dist/index.mjs",
 			"require": "./dist/index.js",
-			"types": "./dist/index.d.ts"
+			"types": "./dist/index.d.mts"
 		}
 	},
 	"sideEffects": false,
