--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -24,8 +24,7 @@
 	"exports": {
 		".": {
 			"types": "./dist/index.d.mts",
-			"import": "./dist/index.mjs",
-			"require": "./dist/index.js"
+			"import": "./dist/index.mjs"
 		}
 	},
 	"scripts": {
