--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -2,13 +2,11 @@
 	"name": "@stepperize/svelte",
 	"version": "0.1.2",
 	"private": true,
-	"main": "dist/index.js",
-	"module": "dist/index.mjs",
-	"types": "dist/index.d.mts",
+	"type": "module",
 	"exports": {
 		".": {
-			"import": "./dist/index.mjs",
-			"types": "./dist/index.d.mts"
+			"types": "./dist/index.d.mts",
+			"import": "./dist/index.mjs"
 		}
 	},
 	"sideEffects": false,
