--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -20,9 +20,8 @@
 	],
 	"type": "module",
 	"exports": {
-		".": {
-			"import": "./dist/index.mjs"
-		}
+		".": "./dist/index.mjs"
+
 	},
 	"scripts": {
 		"build": "tsup",
