--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"type": "module",
 	"exports": {
-		".": "./dist/index.mjs"
+		".": "./dist/index.js"
 	},
 	"sideEffects": false,
 	"files": ["dist"],
