--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -7,47 +7,57 @@
 		"dev": "next dev --turbo",
 		"start": "next start",
 		"postinstall": "fumadocs-mdx",
+		"registry:build": "shadcn build",
 		"clean": "rm -rf .turbo .next node_modules"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.0.1",
 		"@radix-ui/colors": "^3.0.0",
-		"@radix-ui/react-accordion": "^1.2.3",
-		"@radix-ui/react-collapsible": "^1.1.3",
-		"@radix-ui/react-popover": "^1.1.6",
-		"@radix-ui/react-scroll-area": "^1.2.3",
-		"@radix-ui/react-tabs": "^1.1.3",
+		"@radix-ui/react-accordion": "^1.2.7",
+		"@radix-ui/react-collapsible": "^1.1.7",
+		"@radix-ui/react-label": "^2.1.4",
+		"@radix-ui/react-popover": "^1.1.10",
+		"@radix-ui/react-radio-group": "^1.3.2",
+		"@radix-ui/react-scroll-area": "^1.2.5",
+		"@radix-ui/react-slot": "^1.2.0",
+		"@radix-ui/react-tabs": "^1.1.7",
 		"@stepperize/react": "workspace:*",
 		"@stepperize/solid": "workspace:*",
 		"@stepperize/vue": "workspace:*",
 		"class-variance-authority": "^0.7.1",
-		"fumadocs-core": "15.0.15",
-		"fumadocs-mdx": "11.5.6",
-		"fumadocs-typescript": "3.1.0",
-		"fumadocs-twoslash": "3.1.0",
-		"fumadocs-ui": "15.0.15",
+		"clsx": "^2.1.1",
+		"fumadocs-core": "15.2.8",
+		"fumadocs-mdx": "11.6.0",
+		"fumadocs-twoslash": "3.1.1",
+		"fumadocs-typescript": "4.0.2",
+		"fumadocs-ui": "15.2.8",
 		"geist": "1.3.1",
-		"hast-util-to-jsx-runtime": "^2.3.5",
-		"lucide-react": "^0.477.0",
-		"next": "15.2.1",
-		"motion": "^12.4.10",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"shiki": "3.1.0",
+		"hast-util-to-jsx-runtime": "^2.3.6",
+		"lucide-react": "^0.501.0",
+		"motion": "^12.7.4",
+		"next": "15.3.1",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"react-hook-form": "^7.55.0",
+		"shadcn": "2.4.1",
+		"shiki": "3.2.2",
 		"solid-js": "^1.9.5",
-		"tailwind-merge": "^3.0.2",
+		"tailwind-merge": "^3.2.0",
 		"ts-morph": "25.0.1",
-		"twoslash": "^0.3.1"
+		"tw-animate-css": "^1.2.7",
+		"twoslash": "^0.3.1",
+		"zod": "^3.24.3"
 	},
 	"devDependencies": {
-		"@fumadocs/cli": "^0.0.8",
-		"@tailwindcss/postcss": "^4.0.9",
+		"@fumadocs/cli": "^0.1.1",
+		"@tailwindcss/postcss": "^4.1.4",
 		"@types/mdx": "^2.0.13",
-		"@types/node": "22.13.9",
-		"@types/react": "^19.0.10",
-		"@types/react-dom": "^19.0.4",
+		"@types/node": "22.14.1",
+		"@types/react": "^19.1.2",
+		"@types/react-dom": "^19.1.2",
 		"@types/react-syntax-highlighter": "^15.5.13",
 		"postcss": "^8.5.3",
-		"tailwindcss": "^4.0.9",
-		"typescript": "^5.8.2"
+		"tailwindcss": "^4.1.4",
+		"typescript": "^5.8.3"
 	}
 }
