chore: update packages deps

--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -20,7 +20,7 @@
 		"clean": "rm -rf .turbo && rm -rf node_modules dist"
 	},
 	"devDependencies": {
-		"tsup": "^8.4.0",
-		"typescript": "^5.8.2"
+		"tsup": "catalog:",
+		"typescript": "catalog:"
 	}
 }
