--- a/biome.json
+++ b/biome.json
@@ -1,11 +1,9 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
 	"files": {
-		"ignore": ["./.turbo", "./.next", "./.changeset", "./.pnpm-store", "./packages/react/dist"]
+		"includes": ["**", "!.turbo", "!.next", "!.changeset", "!.pnpm-store", "!packages/react/dist"]
 	},
-	"organizeImports": {
-		"enabled": true
-	},
+	"assist": { "actions": { "source": { "organizeImports": "on" } } },
 	"formatter": {
 		"lineWidth": 120
 	},
@@ -23,9 +21,9 @@
 				"useBlockStatements": "off"
 			},
 			"suspicious": {
-				"noConsoleLog": "error",
 				"noExplicitAny": "off",
-				"noArrayIndexKey": "off"
+				"noArrayIndexKey": "off",
+				"noConsole": { "level": "error", "options": { "allow": ["log"] } }
 			},
 			"correctness": {
 				"noUnusedVariables": "error",
