--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
 		"ci:release": "changeset publish"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
+		"@biomejs/biome": "2.1.3",
 		"@changesets/changelog-github": "0.5.1",
-		"@changesets/cli": "^2.29.2",
-		"turbo": "^2.5.0",
-		"typescript": "^5.8.3"
+		"@changesets/cli": "^2.29.5",
+		"turbo": "2.5.5",
+		"typescript": "catalog:"
 	},
-	"packageManager": "pnpm@10.8.1",
+	"packageManager": "pnpm@10.13.1",
 	"engines": {
 		"node": ">=18"
 	}
