chore: update dependencies and fix button props in stepper components
- Bump @biomejs/biome to 2.2.4, @changesets/cli to 2.29.7, and pnpm to 10.16.1 in package.json.
- Update various dependencies in pnpm-lock.yaml and apps/docs/package.json, including typescript and @hookform/resolvers.
- Fix button props in stepper components to include type="button" for better accessibility.
- Adjust import order in stepper demo and related components for consistency.

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,7 +11,7 @@
 		"clean": "rm -rf .turbo .next node_modules"
 	},
 	"dependencies": {
-		"@hookform/resolvers": "^5.2.1",
+		"@hookform/resolvers": "^5.2.2",
 		"@radix-ui/colors": "^3.0.0",
 		"@radix-ui/react-accordion": "^1.2.12",
 		"@radix-ui/react-collapsible": "^1.1.12",
@@ -26,38 +26,38 @@
 		"@stepperize/vue": "workspace:*",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"fumadocs-core": "15.7.9",
-		"fumadocs-mdx": "11.8.3",
+		"fumadocs-core": "15.7.12",
+		"fumadocs-mdx": "11.10.0",
 		"fumadocs-twoslash": "3.1.7",
-		"fumadocs-typescript": "4.0.7",
-		"fumadocs-ui": "15.7.9",
+		"fumadocs-typescript": "4.0.8",
+		"fumadocs-ui": "15.7.12",
 		"geist": "1.5.1",
 		"hast-util-to-jsx-runtime": "^2.3.6",
-		"lucide-react": "^0.542.0",
+		"lucide-react": "^0.544.0",
 		"motion": "^12.23.12",
-		"next": "15.5.2",
+		"next": "15.5.3",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
 		"react-hook-form": "^7.62.0",
-		"shadcn": "3.2.1",
+		"shadcn": "3.3.0",
 		"shiki": "3.12.2",
 		"solid-js": "^1.9.9",
 		"tailwind-merge": "^3.3.1",
-		"ts-morph": "26.0.0",
+		"ts-morph": "27.0.0",
 		"tw-animate-css": "^1.3.8",
 		"twoslash": "^0.3.4",
-		"zod": "^4.1.5"
+		"zod": "^4.1.8"
 	},
 	"devDependencies": {
 		"@fumadocs/cli": "^1.0.1",
 		"@tailwindcss/postcss": "^4.1.13",
 		"@types/mdx": "^2.0.13",
-		"@types/node": "24.3.1",
-		"@types/react": "^19.1.12",
+		"@types/node": "24.5.0",
+		"@types/react": "^19.1.13",
 		"@types/react-dom": "^19.1.9",
 		"@types/react-syntax-highlighter": "^15.5.13",
 		"postcss": "^8.5.6",
 		"tailwindcss": "^4.1.13",
-		"typescript": "^5.8.3"
+		"typescript": "catalog:"
 	}
 }
