--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -29,7 +29,8 @@
 		"dev": "tsup --watch",
 		"lint": "turbo lint",
 		"prepublishOnly": "pnpm run build",
-		"clean": "rm -rf .turbo && rm -rf node_modules dist"
+		"clean": "rm -rf .turbo && rm -rf node_modules dist",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@stepperize/core": "workspace:*"
@@ -38,10 +39,14 @@
 		"react": "^17.0.0 || ^18.0.0 || ^19.0.0"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "catalog:",
+		"@testing-library/react": "catalog:",
 		"@types/react": "^19.1.12",
+		"jsdom": "catalog:",
 		"react": "^19.1.1",
 		"terser": "catalog:",
 		"tsup": "catalog:",
-		"typescript": "catalog:"
+		"typescript": "catalog:",
+		"vitest": "catalog:"
 	}
 }
