--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,10 @@ packages:
   - "apps/*"
   - "packages/*"
 catalog:
+  "@testing-library/jest-dom": ^6.8.0
+  "@testing-library/react": ^16.3.0
+  jsdom: ^27.0.0
   tsup: ^8.5.0
   terser: ^5.44.0
   typescript: ^5.9.2
+  vitest: ^3.2.4
