--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,10 +2,14 @@ packages:
   - "apps/*"
   - "packages/*"
 catalog:
-  "@testing-library/jest-dom": ^6.8.0
+  "@testing-library/jest-dom": ^6.9.1
   "@testing-library/react": ^16.3.0
+  "@types/react": ^19.2.0
+  "@types/react-dom": ^19.2.0
   jsdom: ^27.0.0
+  react: ^19.2.0
+  react-dom: ^19.2.0
   tsup: ^8.5.0
   terser: ^5.44.0
-  typescript: ^5.9.2
+  typescript: ^5.9.3
   vitest: ^3.2.4
