--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -26,38 +26,38 @@
 		"@stepperize/vue": "workspace:*",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"fumadocs-core": "15.7.12",
-		"fumadocs-mdx": "11.10.0",
-		"fumadocs-twoslash": "3.1.7",
-		"fumadocs-typescript": "4.0.8",
-		"fumadocs-ui": "15.7.12",
+		"fumadocs-core": "15.8.3",
+		"fumadocs-mdx": "12.0.2",
+		"fumadocs-twoslash": "3.1.8",
+		"fumadocs-typescript": "4.0.11",
+		"fumadocs-ui": "15.8.3",
 		"geist": "1.5.1",
 		"hast-util-to-jsx-runtime": "^2.3.6",
 		"lucide-react": "^0.544.0",
-		"motion": "^12.23.12",
-		"next": "15.5.3",
-		"react": "^19.1.1",
-		"react-dom": "^19.1.1",
-		"react-hook-form": "^7.62.0",
-		"shadcn": "3.3.0",
-		"shiki": "3.12.2",
+		"motion": "^12.23.22",
+		"next": "15.5.4",
+		"react": "catalog:",
+		"react-dom": "catalog:",
+		"react-hook-form": "^7.64.0",
+		"shadcn": "3.4.0",
+		"shiki": "3.13.0",
 		"solid-js": "^1.9.9",
 		"tailwind-merge": "^3.3.1",
 		"ts-morph": "27.0.0",
-		"tw-animate-css": "^1.3.8",
+		"tw-animate-css": "^1.4.0",
 		"twoslash": "^0.3.4",
-		"zod": "^4.1.8"
+		"zod": "^4.1.11"
 	},
 	"devDependencies": {
-		"@fumadocs/cli": "^1.0.1",
-		"@tailwindcss/postcss": "^4.1.13",
+		"@fumadocs/cli": "^1.0.2",
+		"@tailwindcss/postcss": "^4.1.14",
 		"@types/mdx": "^2.0.13",
-		"@types/node": "24.5.0",
-		"@types/react": "^19.1.13",
-		"@types/react-dom": "^19.1.9",
+		"@types/node": "24.7.0",
+		"@types/react": "catalog:",
+		"@types/react-dom": "catalog:",
 		"@types/react-syntax-highlighter": "^15.5.13",
 		"postcss": "^8.5.6",
-		"tailwindcss": "^4.1.13",
+		"tailwindcss": "^4.1.14",
 		"typescript": "catalog:"
 	}
 }
