--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -41,9 +41,9 @@
 	"devDependencies": {
 		"@testing-library/jest-dom": "catalog:",
 		"@testing-library/react": "catalog:",
-		"@types/react": "^19.1.12",
+		"@types/react": "catalog:",
 		"jsdom": "catalog:",
-		"react": "^19.1.1",
+		"react": "catalog:",
 		"terser": "catalog:",
 		"tsup": "catalog:",
 		"typescript": "catalog:",
