--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -3,7 +3,7 @@
 	"version": "2.5.6",
 	"private": true,
 	"scripts": {
-		"build": "next build",
+		"build": "next build --turbo",
 		"dev": "next dev --turbo",
 		"start": "next start",
 		"postinstall": "fumadocs-mdx",
