--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -24,6 +24,7 @@
 		"@stepperize/react": "workspace:*",
 		"@stepperize/solid": "workspace:*",
 		"@stepperize/vue": "workspace:*",
+		"arktype": "^2.1.22",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"fumadocs-core": "15.8.3",
@@ -46,6 +47,7 @@
 		"ts-morph": "27.0.0",
 		"tw-animate-css": "^1.4.0",
 		"twoslash": "^0.3.4",
+		"valibot": "^1.1.0",
 		"zod": "^4.1.11"
 	},
 	"devDependencies": {
