chore: update dependencies and configuration files
- Updated Biome schema version in biome.json to 2.3.11.
- Updated package versions in package.json, including pnpm to 10.28.0 and solid-js to 1.9.10.
- Updated various dependencies in pnpm-lock.yaml.
- Adjusted Tailwind CSS version in apps/docs/package.json to 4.1.18.
- Made minor formatting changes in several component files for consistency.
- Removed unused language-toggle component.
- Updated stepper demo components and their respective pages for better structure and clarity.

--- a/biome.json
+++ b/biome.json
@@ -1,11 +1,16 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
 	"files": {
 		"includes": ["**", "!.turbo", "!.next", "!.changeset", "!.pnpm-store", "!packages/react/dist"]
 	},
 	"assist": { "actions": { "source": { "organizeImports": "on" } } },
 	"formatter": {
 		"lineWidth": 120
+	},
+	"css": {
+		"parser": {
+			"tailwindDirectives": true
+		}
 	},
 	"linter": {
 		"enabled": true,
