--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,15 +1,16 @@
 packages:
-  - "apps/*"
-  - "packages/*"
+  - apps/*
+  - packages/*
+
 catalog:
-  "@testing-library/jest-dom": ^6.9.1
-  "@testing-library/react": ^16.3.0
-  "@types/react": ^19.2.0
-  "@types/react-dom": ^19.2.0
-  jsdom: ^27.0.0
-  react: ^19.2.0
-  react-dom: ^19.2.0
-  tsup: ^8.5.0
-  terser: ^5.44.0
+  '@testing-library/jest-dom': ^6.9.1
+  '@testing-library/react': ^16.3.2
+  '@types/react': ^19.2.8
+  '@types/react-dom': ^19.2.3
+  jsdom: ^27.4.0
+  react: ^19.2.3
+  react-dom: ^19.2.3
+  terser: ^5.46.0
+  tsup: ^8.5.1
   typescript: ^5.9.3
-  vitest: ^3.2.4
+  vitest: ^4.0.17
