refactor: update stepper to use data.id for current step and improve type definitions
- Removed workspace dependencies for `@stepperize/solid` and `@stepperize/vue` from package.json.
- Updated the stepper component to reference `data.id` instead of `id` for current step management.
- Enhanced type definitions for better clarity and consistency across the stepper API.
- Added new primitives for stepper UI components, including Actions, Content, Description, and more.
- Improved tests to reflect changes in step management and initialization handling.

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -22,7 +22,14 @@
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
 	"exports": {
-		".": "./dist/index.js"
+		".": {
+			"types": "./dist/index.d.ts",
+			"import": "./dist/index.js"
+		},
+		"./primitives": {
+			"types": "./dist/primitives/index.d.ts",
+			"import": "./dist/primitives/index.js"
+		}
 	},
 	"scripts": {
 		"build": "tsup",
