feat: integrate TanStack Form and enhance documentation for multi-step forms
- Added support for TanStack Form in the demo components, showcasing its integration with the stepper for multi-step forms.
- Introduced a new demo component, `TanstackFormPreview`, to illustrate the usage of TanStack Form with stepper functionality.
- Updated existing documentation to include detailed examples and guides for using TanStack Form alongside Conform and React Hook Form.
- Enhanced API references and examples to clarify the validation process using Zod schemas within the stepper context.
- Removed outdated examples and consolidated documentation for better organization and accessibility.

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -14,11 +14,14 @@
 		"clean": "rm -rf .turbo .next node_modules"
 	},
 	"dependencies": {
+		"@conform-to/react": "^1.16.0",
+		"@conform-to/zod": "^1.16.0",
 		"@hookform/resolvers": "^5.2.2",
 		"radix-ui": "^1.4.3",
 		"@base-ui/react": "^1.1.0",
 		"@radix-ui/colors": "^3.0.0",
 		"@stepperize/react": "workspace:*",
+		"@tanstack/react-form": "^1.28.0",
 		"arktype": "^2.1.29",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
