feat: update pnpm-lock and enhance documentation for stepper integration
- Added `@stepperize/core` as a workspace dependency in `pnpm-lock.yaml` and `package.json`.
- Removed outdated dependencies related to `@tanstack/zod-form-adapter` to streamline package management.
- Improved documentation for the `useStepper` hook, clarifying its API and configuration options.
- Enhanced API references and examples for stepper components, including detailed descriptions and usage patterns.
- Updated various sections to improve clarity and accessibility for developers integrating stepper functionality.

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -20,6 +20,7 @@
 		"radix-ui": "^1.4.3",
 		"@base-ui/react": "^1.1.0",
 		"@radix-ui/colors": "^3.0.0",
+		"@stepperize/core": "workspace:*",
 		"@stepperize/react": "workspace:*",
 		"@tanstack/react-form": "^1.28.0",
 		"arktype": "^2.1.29",
